--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "errorhandler": "^1.1.1",
+    "lodash": "^3.10.1",
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-connector-mysql": "^2.2.0",
     "loopback-datasource-juggler": "^2.19.0",
-    "serve-favicon": "^2.0.1"
+    "rootpath": "^0.1.2",
+    "serve-favicon": "^2.0.1",
+    "validator": "^4.3.0"
   },
   "optionalDependencies": {
     "loopback-explorer": "^1.1.0"
